<resources>
    <string name="app_name">GamifyUI</string>
    <string name="background_image">Background Image</string>
    <string name="transparent">Transparent</string>
    <string name="gamify_logo">Gamify Logo</string>
    <string name="janedoe_email_com">janedoe@email.com</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy">By creating an account, you agree to our Terms of Service and Privacy Policy</string>
    <string name="new_user">New user? </string>
    <string name="sign_up"> Sign up </string>
    <string name="here">here</string>
    <string name="nick_r_bocker">Nick R. Bocker</string>
    <string name="your_account_is_ready_tap_on_get_started_to_proceed">Your account is ready! Tap on Get Started to proceed.</string>
    <string name="get_started">Get Started</string>
    <string name="profile_picture">Profile picture</string>
    <string name="forgot_password_txt">Forgot Password</string>
    <string name="enter_the_email_address_you_used_to_create_your_account_and_we_will_email_you_a_link_to_reset_your_password">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="submit">Submit</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="most_played">Most Played</string>
    <string name="best_offer_games">Best Offer Games</string>
    <string name="game_store">Game Store</string>
    <string name="favourites">Favourites</string>
    <string name="recently_added">Recently Added</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="nickbocker40_gmail_com">nickbocker40@gmail.com</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="type_here">Type here</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="edit">Edit</string>
    <string name="description">Description</string>
    <string name="call_of_duty_wwii">Call of Duty WWII</string>
    <string name="call_of_duty_wwii_is_a_first_person_shooter_video_game_developed_by_sledgehammer_games_and_published_by_activision">Call of Duty: WWII is a first-person shooter video game developed by Sledgehammer Games and published by Activision.</string>
    <string name="battlefield_v_firestrome">Battlefield V : Firestrome</string>
    <string name="ea_games">EA Games</string>
    <string name="snapshot">Snapshot</string>
    <string name="see_all">See all</string>
    <string name="this_review_focuses_solely_on_the_newly_released_firestorm_battle_royale_mode_to_see_what_we_thought_of_the_single_player_and_multiplayer_sides_of_battlefield_v_check_out_those_reviews_n_nbetter_late_than_never_battlefield_v_has_patched_in_its_take_on_the_battle_royale_genre_firestorm_mode_takes_the_large_environments_realistic_weapons_and_vehicle_warfare_battlefield_players_know_and_love_and_injects_them_into_a_beautiful_map_however_what_firestorm_doesn_t_do_is_move_the_needle_in_terms_of_originality_and_innovation_and_it_fails_to_come_up_with_hooks_that_keep_me_coming_back_to_play_player_unknown_s_battlegrounds_made_the_first_waves_in_the_genre_with_its_realistic_style_and_firestorm_feels_like_a_more_polished_but_less_distinctive_version_of_that_same_idea">This review focuses solely on the newly released Firestorm battle royale mode. To see what we thought of the single-player and multiplayer sides of Battlefield V, check out those reviews.\n\nBetter late than never, Battlefield V has patched in its take on the battle royale genre. Firestorm mode takes the large environments, realistic weapons, and vehicle warfare Battlefield players know and love and injects them into a beautiful map. However, what Firestorm doesn’t do is move the needle in terms of originality and innovation, and it fails to come up with hooks that keep me coming back to play. Player Unknown’s Battlegrounds made the first waves in the genre with its realistic style and Firestorm feels like a more polished but less distinctive version of that same idea.</string>
    <string name="ghost_recon_breakpoint">Ghost Recon Breakpoint</string>
    <string name="grand_theft_auto_v">Grand Theft Auto V</string>
</resources>