<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_most_played"
            android:icon="@drawable/ic_baseline_live_tv_24"
            android:title="@string/most_played" />
        <item
            android:id="@+id/nav_best_offer_games"
            android:icon="@drawable/ic_baseline_loyalty_24"
            android:title="@string/best_offer_games" />
        <item
            android:id="@+id/nav_game_store"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/game_store" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_recently_added"
            android:icon="@drawable/ic_baseline_playlist_add_24"
            android:title="@string/recently_added" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout" />
    </group>
</menu>